--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
 			<version>0.10.2</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-nop</artifactId>
+			<version>1.7.32</version>
+		</dependency>
+
 		<!-- Driver JDBC do MySQL (se quiser conectar no banco) -->
 		<dependency>
 			<groupId>com.mysql</groupId>
