--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
 			<version>0.10.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10.1</version>
+		</dependency>
+
+
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
