--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.mindrot</groupId>
+			<artifactId>jbcrypt</artifactId>
+			<version>0.4</version>
+		</dependency>
+
+
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
