--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=ZardFramework
+db.url=jdbc:mysql://localhost:3306/frame?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+db.user=root
+db.password=zard
+db.pool.size=10
+
